y.output
Terminals unused in grammar

   BOOL
   FLOAT
   '-'
   '+'
   '*'
   '%'
   '('
   ')'
   '{'
   '['
   ']'
   '$'
   '}'
   '\\'


Grammar

    0 $accept: algorithme $end

    1 algorithme: DEBUTALGO func_part ENDALGO

    2 func_part: declaration_list FINDESCRIPTION suite_description

    3 declaration_list: constant_list input_list output_list global_list local_list

    4 constant_list: CONSTANT constantbis

    5 constantbis: declaration
    6            | ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME

    7 input_list: INPUT inputbis

    8 inputbis: declaration
    9         | ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME

   10 output_list: OUTPUT outputbis

   11 outputbis: declaration
   12          | ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME

   13 global_list: GLOBAL globalbis

   14 globalbis: declaration
   15          | ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME

   16 local_list: LOCAL localbis

   17 localbis: declaration
   18         | ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME

   19 declaration: ACCOUVRE DOLLAR suite_declaration DOLLAR ACCFERME

   20 suite_declaration: /* empty */
   21                  | declaration ',' suite_declaration
   22                  | declaration

   23 declaration: declaration_val
   24            | declaration_cons

   25 declaration_val: SCALAIRE type_scalaire

   26 type_scalaire: ENTIER PUISS ACCOUVRE ENTIER ACCFERME

   27 declaration_cons: IDENTIFIANT EGALE valeur IN type_scalaire

   28 suite_description: element_desc suite_description
   29                  | /* empty */

   30 element_desc: structure_controle
   31             | DOLLAR instruction DOLLAR FININSTRUCTION

   32 structure_controle: WHILE ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME
   33                   | FOR ACCOUVRE DOLLAR affectation KWTO DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME
   34                   | REPEAT ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME
   35                   | IF ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME
   36                   | EIF ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

   37 affectation: IDENTIFIANT LEFTARROW valeur

   38 expr_bool: operand_bool bool_op operand_bool
   39          | NOT expr_bool

   40 operand_bool: IDENTIFIANT
   41             | valeur
   42             | PAROUVRE expr_bool PARFERME

   43 bool_op: OU
   44        | ET
   45        | GRANDEGALE
   46        | PETITEGALE
   47        | DIFFERENT

   48 instruction: IDENTIFIANT LEFTARROW expression

   49 expression: valeur
   50           | operand operateur operand
   51           | APPEL ACCOUVRE IDENTIFIANT PAROUVRE expression PARFERME ACCFERME

   52 operand: valeur
   53        | IDENTIFIANT
   54        | PAROUVRE expression PARFERME

   55 operateur: MULT
   56          | PLUS
   57          | MOINS
   58          | PUISS

   59 valeur: ENTIER


Terminals, with rules where they appear

$end (0) 0
'$' (36)
'%' (37)
'(' (40)
')' (41)
'*' (42)
'+' (43)
',' (44) 21
'-' (45)
'[' (91)
'\\' (92)
']' (93)
'{' (123)
'}' (125)
error (256)
DEBUTALGO (258) 1
ENDALGO (259) 1
FINDESCRIPTION (260) 2
FININSTRUCTION (261) 31
ACCOUVRE (262) 6 9 12 15 18 19 26 32 33 34 35 36 51
ACCFERME (263) 6 9 12 15 18 19 26 32 33 34 35 36 51
PAROUVRE (264) 42 51 54
PARFERME (265) 42 51 54
EMPTYSET (266) 6 9 12 15 18
CONSTANT (267) 4
INPUT (268) 7
OUTPUT (269) 10
GLOBAL (270) 13
LOCAL (271) 16
SCALAIRE (272) 25
BOOL (273)
FLOAT (274)
ENTIER (275) 26 33 59
PUISS (276) 26 58
MULT (277) 55
PLUS (278) 56
MOINS (279) 57
IDENTIFIANT (280) 27 37 40 48 51 53
OU (281) 43
ET (282) 44
GRANDEGALE (283) 45
PETITEGALE (284) 46
DIFFERENT (285) 47
LEFTARROW (286) 37 48
APPEL (287) 51
EGALE (288) 27
DOLLAR (289) 6 9 12 15 18 19 31 33
FOR (290) 33
WHILE (291) 32
REPEAT (292) 34
IF (293) 35
EIF (294) 36
NOT (295) 39
IN (296) 27
KWTO (297) 33


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
algorithme (57)
    on left: 1, on right: 0
func_part (58)
    on left: 2, on right: 1
declaration_list (59)
    on left: 3, on right: 2
constant_list (60)
    on left: 4, on right: 3
constantbis (61)
    on left: 5 6, on right: 4
input_list (62)
    on left: 7, on right: 3
inputbis (63)
    on left: 8 9, on right: 7
output_list (64)
    on left: 10, on right: 3
outputbis (65)
    on left: 11 12, on right: 10
global_list (66)
    on left: 13, on right: 3
globalbis (67)
    on left: 14 15, on right: 13
local_list (68)
    on left: 16, on right: 3
localbis (69)
    on left: 17 18, on right: 16
declaration (70)
    on left: 19 23 24, on right: 5 8 11 14 17 21 22
suite_declaration (71)
    on left: 20 21 22, on right: 19 21
declaration_val (72)
    on left: 25, on right: 23
type_scalaire (73)
    on left: 26, on right: 25 27
declaration_cons (74)
    on left: 27, on right: 24
suite_description (75)
    on left: 28 29, on right: 2 28 32 33 34 35 36
element_desc (76)
    on left: 30 31, on right: 28
structure_controle (77)
    on left: 32 33 34 35 36, on right: 30
affectation (78)
    on left: 37, on right: 33
expr_bool (79)
    on left: 38 39, on right: 32 34 35 36 39 42
operand_bool (80)
    on left: 40 41 42, on right: 38
bool_op (81)
    on left: 43 44 45 46 47, on right: 38
instruction (82)
    on left: 48, on right: 31
expression (83)
    on left: 49 50 51, on right: 48 51 54
operand (84)
    on left: 52 53 54, on right: 50
operateur (85)
    on left: 55 56 57 58, on right: 50
valeur (86)
    on left: 59, on right: 27 37 41 49 52


state 0

    0 $accept: . algorithme $end

    DEBUTALGO  shift, and go to state 1

    algorithme  go to state 2


state 1

    1 algorithme: DEBUTALGO . func_part ENDALGO

    CONSTANT  shift, and go to state 3

    func_part         go to state 4
    declaration_list  go to state 5
    constant_list     go to state 6


state 2

    0 $accept: algorithme . $end

    $end  shift, and go to state 7


state 3

    4 constant_list: CONSTANT . constantbis

    ACCOUVRE     shift, and go to state 8
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    constantbis       go to state 11
    declaration       go to state 12
    declaration_val   go to state 13
    declaration_cons  go to state 14


state 4

    1 algorithme: DEBUTALGO func_part . ENDALGO

    ENDALGO  shift, and go to state 15


state 5

    2 func_part: declaration_list . FINDESCRIPTION suite_description

    FINDESCRIPTION  shift, and go to state 16


state 6

    3 declaration_list: constant_list . input_list output_list global_list local_list

    INPUT  shift, and go to state 17

    input_list  go to state 18


state 7

    0 $accept: algorithme $end .

    $default  accept


state 8

    6 constantbis: ACCOUVRE . DOLLAR EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 19


state 9

   25 declaration_val: SCALAIRE . type_scalaire

    ENTIER  shift, and go to state 20

    type_scalaire  go to state 21


state 10

   27 declaration_cons: IDENTIFIANT . EGALE valeur IN type_scalaire

    EGALE  shift, and go to state 22


state 11

    4 constant_list: CONSTANT constantbis .

    $default  reduce using rule 4 (constant_list)


state 12

    5 constantbis: declaration .

    $default  reduce using rule 5 (constantbis)


state 13

   23 declaration: declaration_val .

    $default  reduce using rule 23 (declaration)


state 14

   24 declaration: declaration_cons .

    $default  reduce using rule 24 (declaration)


state 15

    1 algorithme: DEBUTALGO func_part ENDALGO .

    $default  reduce using rule 1 (algorithme)


state 16

    2 func_part: declaration_list FINDESCRIPTION . suite_description

    DOLLAR  shift, and go to state 23
    FOR     shift, and go to state 24
    WHILE   shift, and go to state 25
    REPEAT  shift, and go to state 26
    IF      shift, and go to state 27
    EIF     shift, and go to state 28

    $default  reduce using rule 29 (suite_description)

    suite_description   go to state 29
    element_desc        go to state 30
    structure_controle  go to state 31


state 17

    7 input_list: INPUT . inputbis

    ACCOUVRE     shift, and go to state 32
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    inputbis          go to state 33
    declaration       go to state 34
    declaration_val   go to state 13
    declaration_cons  go to state 14


state 18

    3 declaration_list: constant_list input_list . output_list global_list local_list

    OUTPUT  shift, and go to state 35

    output_list  go to state 36


state 19

    6 constantbis: ACCOUVRE DOLLAR . EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE DOLLAR . suite_declaration DOLLAR ACCFERME

    ACCOUVRE     shift, and go to state 37
    EMPTYSET     shift, and go to state 38
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 40
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 20

   26 type_scalaire: ENTIER . PUISS ACCOUVRE ENTIER ACCFERME

    PUISS  shift, and go to state 41


state 21

   25 declaration_val: SCALAIRE type_scalaire .

    $default  reduce using rule 25 (declaration_val)


state 22

   27 declaration_cons: IDENTIFIANT EGALE . valeur IN type_scalaire

    ENTIER  shift, and go to state 42

    valeur  go to state 43


state 23

   31 element_desc: DOLLAR . instruction DOLLAR FININSTRUCTION

    IDENTIFIANT  shift, and go to state 44

    instruction  go to state 45


state 24

   33 structure_controle: FOR . ACCOUVRE DOLLAR affectation KWTO DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 46


state 25

   32 structure_controle: WHILE . ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 47


state 26

   34 structure_controle: REPEAT . ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 48


state 27

   35 structure_controle: IF . ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 49


state 28

   36 structure_controle: EIF . ACCOUVRE expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 50


state 29

    2 func_part: declaration_list FINDESCRIPTION suite_description .

    $default  reduce using rule 2 (func_part)


state 30

   28 suite_description: element_desc . suite_description

    DOLLAR  shift, and go to state 23
    FOR     shift, and go to state 24
    WHILE   shift, and go to state 25
    REPEAT  shift, and go to state 26
    IF      shift, and go to state 27
    EIF     shift, and go to state 28

    $default  reduce using rule 29 (suite_description)

    suite_description   go to state 51
    element_desc        go to state 30
    structure_controle  go to state 31


state 31

   30 element_desc: structure_controle .

    $default  reduce using rule 30 (element_desc)


state 32

    9 inputbis: ACCOUVRE . DOLLAR EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 52


state 33

    7 input_list: INPUT inputbis .

    $default  reduce using rule 7 (input_list)


state 34

    8 inputbis: declaration .

    $default  reduce using rule 8 (inputbis)


state 35

   10 output_list: OUTPUT . outputbis

    ACCOUVRE     shift, and go to state 53
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    outputbis         go to state 54
    declaration       go to state 55
    declaration_val   go to state 13
    declaration_cons  go to state 14


state 36

    3 declaration_list: constant_list input_list output_list . global_list local_list

    GLOBAL  shift, and go to state 56

    global_list  go to state 57


state 37

   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 58


state 38

    6 constantbis: ACCOUVRE DOLLAR EMPTYSET . DOLLAR ACCFERME

    DOLLAR  shift, and go to state 59


state 39

   21 suite_declaration: declaration . ',' suite_declaration
   22                  | declaration .

    ','  shift, and go to state 60

    $default  reduce using rule 22 (suite_declaration)


state 40

   19 declaration: ACCOUVRE DOLLAR suite_declaration . DOLLAR ACCFERME

    DOLLAR  shift, and go to state 61


state 41

   26 type_scalaire: ENTIER PUISS . ACCOUVRE ENTIER ACCFERME

    ACCOUVRE  shift, and go to state 62


state 42

   59 valeur: ENTIER .

    $default  reduce using rule 59 (valeur)


state 43

   27 declaration_cons: IDENTIFIANT EGALE valeur . IN type_scalaire

    IN  shift, and go to state 63


state 44

   48 instruction: IDENTIFIANT . LEFTARROW expression

    LEFTARROW  shift, and go to state 64


state 45

   31 element_desc: DOLLAR instruction . DOLLAR FININSTRUCTION

    DOLLAR  shift, and go to state 65


state 46

   33 structure_controle: FOR ACCOUVRE . DOLLAR affectation KWTO DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME

    DOLLAR  shift, and go to state 66


state 47

   32 structure_controle: WHILE ACCOUVRE . expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 70
    operand_bool  go to state 71
    valeur        go to state 72


state 48

   34 structure_controle: REPEAT ACCOUVRE . expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 73
    operand_bool  go to state 71
    valeur        go to state 72


state 49

   35 structure_controle: IF ACCOUVRE . expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 74
    operand_bool  go to state 71
    valeur        go to state 72


state 50

   36 structure_controle: EIF ACCOUVRE . expr_bool ACCFERME ACCOUVRE suite_description ACCFERME

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 75
    operand_bool  go to state 71
    valeur        go to state 72


state 51

   28 suite_description: element_desc suite_description .

    $default  reduce using rule 28 (suite_description)


state 52

    9 inputbis: ACCOUVRE DOLLAR . EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE DOLLAR . suite_declaration DOLLAR ACCFERME

    ACCOUVRE     shift, and go to state 37
    EMPTYSET     shift, and go to state 76
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 40
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 53

   12 outputbis: ACCOUVRE . DOLLAR EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 77


state 54

   10 output_list: OUTPUT outputbis .

    $default  reduce using rule 10 (output_list)


state 55

   11 outputbis: declaration .

    $default  reduce using rule 11 (outputbis)


state 56

   13 global_list: GLOBAL . globalbis

    ACCOUVRE     shift, and go to state 78
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    globalbis         go to state 79
    declaration       go to state 80
    declaration_val   go to state 13
    declaration_cons  go to state 14


state 57

    3 declaration_list: constant_list input_list output_list global_list . local_list

    LOCAL  shift, and go to state 81

    local_list  go to state 82


state 58

   19 declaration: ACCOUVRE DOLLAR . suite_declaration DOLLAR ACCFERME

    ACCOUVRE     shift, and go to state 37
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 40
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 59

    6 constantbis: ACCOUVRE DOLLAR EMPTYSET DOLLAR . ACCFERME

    ACCFERME  shift, and go to state 83


state 60

   21 suite_declaration: declaration ',' . suite_declaration

    ACCOUVRE     shift, and go to state 37
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 84
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 61

   19 declaration: ACCOUVRE DOLLAR suite_declaration DOLLAR . ACCFERME

    ACCFERME  shift, and go to state 85


state 62

   26 type_scalaire: ENTIER PUISS ACCOUVRE . ENTIER ACCFERME

    ENTIER  shift, and go to state 86


state 63

   27 declaration_cons: IDENTIFIANT EGALE valeur IN . type_scalaire

    ENTIER  shift, and go to state 20

    type_scalaire  go to state 87


state 64

   48 instruction: IDENTIFIANT LEFTARROW . expression

    PAROUVRE     shift, and go to state 88
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 89
    APPEL        shift, and go to state 90

    expression  go to state 91
    operand     go to state 92
    valeur      go to state 93


state 65

   31 element_desc: DOLLAR instruction DOLLAR . FININSTRUCTION

    FININSTRUCTION  shift, and go to state 94


state 66

   33 structure_controle: FOR ACCOUVRE DOLLAR . affectation KWTO DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME

    IDENTIFIANT  shift, and go to state 95

    affectation  go to state 96


state 67

   42 operand_bool: PAROUVRE . expr_bool PARFERME

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 97
    operand_bool  go to state 71
    valeur        go to state 72


state 68

   40 operand_bool: IDENTIFIANT .

    $default  reduce using rule 40 (operand_bool)


state 69

   39 expr_bool: NOT . expr_bool

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68
    NOT          shift, and go to state 69

    expr_bool     go to state 98
    operand_bool  go to state 71
    valeur        go to state 72


state 70

   32 structure_controle: WHILE ACCOUVRE expr_bool . ACCFERME ACCOUVRE suite_description ACCFERME

    ACCFERME  shift, and go to state 99


state 71

   38 expr_bool: operand_bool . bool_op operand_bool

    OU          shift, and go to state 100
    ET          shift, and go to state 101
    GRANDEGALE  shift, and go to state 102
    PETITEGALE  shift, and go to state 103
    DIFFERENT   shift, and go to state 104

    bool_op  go to state 105


state 72

   41 operand_bool: valeur .

    $default  reduce using rule 41 (operand_bool)


state 73

   34 structure_controle: REPEAT ACCOUVRE expr_bool . ACCFERME ACCOUVRE suite_description ACCFERME

    ACCFERME  shift, and go to state 106


state 74

   35 structure_controle: IF ACCOUVRE expr_bool . ACCFERME ACCOUVRE suite_description ACCFERME

    ACCFERME  shift, and go to state 107


state 75

   36 structure_controle: EIF ACCOUVRE expr_bool . ACCFERME ACCOUVRE suite_description ACCFERME

    ACCFERME  shift, and go to state 108


state 76

    9 inputbis: ACCOUVRE DOLLAR EMPTYSET . DOLLAR ACCFERME

    DOLLAR  shift, and go to state 109


state 77

   12 outputbis: ACCOUVRE DOLLAR . EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE DOLLAR . suite_declaration DOLLAR ACCFERME

    ACCOUVRE     shift, and go to state 37
    EMPTYSET     shift, and go to state 110
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 40
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 78

   15 globalbis: ACCOUVRE . DOLLAR EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 111


state 79

   13 global_list: GLOBAL globalbis .

    $default  reduce using rule 13 (global_list)


state 80

   14 globalbis: declaration .

    $default  reduce using rule 14 (globalbis)


state 81

   16 local_list: LOCAL . localbis

    ACCOUVRE     shift, and go to state 112
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    localbis          go to state 113
    declaration       go to state 114
    declaration_val   go to state 13
    declaration_cons  go to state 14


state 82

    3 declaration_list: constant_list input_list output_list global_list local_list .

    $default  reduce using rule 3 (declaration_list)


state 83

    6 constantbis: ACCOUVRE DOLLAR EMPTYSET DOLLAR ACCFERME .

    $default  reduce using rule 6 (constantbis)


state 84

   21 suite_declaration: declaration ',' suite_declaration .

    $default  reduce using rule 21 (suite_declaration)


state 85

   19 declaration: ACCOUVRE DOLLAR suite_declaration DOLLAR ACCFERME .

    $default  reduce using rule 19 (declaration)


state 86

   26 type_scalaire: ENTIER PUISS ACCOUVRE ENTIER . ACCFERME

    ACCFERME  shift, and go to state 115


state 87

   27 declaration_cons: IDENTIFIANT EGALE valeur IN type_scalaire .

    $default  reduce using rule 27 (declaration_cons)


state 88

   54 operand: PAROUVRE . expression PARFERME

    PAROUVRE     shift, and go to state 88
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 89
    APPEL        shift, and go to state 90

    expression  go to state 116
    operand     go to state 92
    valeur      go to state 93


state 89

   53 operand: IDENTIFIANT .

    $default  reduce using rule 53 (operand)


state 90

   51 expression: APPEL . ACCOUVRE IDENTIFIANT PAROUVRE expression PARFERME ACCFERME

    ACCOUVRE  shift, and go to state 117


state 91

   48 instruction: IDENTIFIANT LEFTARROW expression .

    $default  reduce using rule 48 (instruction)


state 92

   50 expression: operand . operateur operand

    PUISS  shift, and go to state 118
    MULT   shift, and go to state 119
    PLUS   shift, and go to state 120
    MOINS  shift, and go to state 121

    operateur  go to state 122


state 93

   49 expression: valeur .
   52 operand: valeur .

    PARFERME  reduce using rule 49 (expression)
    DOLLAR    reduce using rule 49 (expression)
    $default  reduce using rule 52 (operand)


state 94

   31 element_desc: DOLLAR instruction DOLLAR FININSTRUCTION .

    $default  reduce using rule 31 (element_desc)


state 95

   37 affectation: IDENTIFIANT . LEFTARROW valeur

    LEFTARROW  shift, and go to state 123


state 96

   33 structure_controle: FOR ACCOUVRE DOLLAR affectation . KWTO DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME

    KWTO  shift, and go to state 124


state 97

   42 operand_bool: PAROUVRE expr_bool . PARFERME

    PARFERME  shift, and go to state 125


state 98

   39 expr_bool: NOT expr_bool .

    $default  reduce using rule 39 (expr_bool)


state 99

   32 structure_controle: WHILE ACCOUVRE expr_bool ACCFERME . ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 126


state 100

   43 bool_op: OU .

    $default  reduce using rule 43 (bool_op)


state 101

   44 bool_op: ET .

    $default  reduce using rule 44 (bool_op)


state 102

   45 bool_op: GRANDEGALE .

    $default  reduce using rule 45 (bool_op)


state 103

   46 bool_op: PETITEGALE .

    $default  reduce using rule 46 (bool_op)


state 104

   47 bool_op: DIFFERENT .

    $default  reduce using rule 47 (bool_op)


state 105

   38 expr_bool: operand_bool bool_op . operand_bool

    PAROUVRE     shift, and go to state 67
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 68

    operand_bool  go to state 127
    valeur        go to state 72


state 106

   34 structure_controle: REPEAT ACCOUVRE expr_bool ACCFERME . ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 128


state 107

   35 structure_controle: IF ACCOUVRE expr_bool ACCFERME . ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 129


state 108

   36 structure_controle: EIF ACCOUVRE expr_bool ACCFERME . ACCOUVRE suite_description ACCFERME

    ACCOUVRE  shift, and go to state 130


state 109

    9 inputbis: ACCOUVRE DOLLAR EMPTYSET DOLLAR . ACCFERME

    ACCFERME  shift, and go to state 131


state 110

   12 outputbis: ACCOUVRE DOLLAR EMPTYSET . DOLLAR ACCFERME

    DOLLAR  shift, and go to state 132


state 111

   15 globalbis: ACCOUVRE DOLLAR . EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE DOLLAR . suite_declaration DOLLAR ACCFERME

    ACCOUVRE     shift, and go to state 37
    EMPTYSET     shift, and go to state 133
    SCALAIRE     shift, and go to state 9
    IDENTIFIANT  shift, and go to state 10

    $default  reduce using rule 20 (suite_declaration)

    declaration        go to state 39
    suite_declaration  go to state 40
    declaration_val    go to state 13
    declaration_cons   go to state 14


state 112

   18 localbis: ACCOUVRE . DOLLAR EMPTYSET DOLLAR ACCFERME
   19 declaration: ACCOUVRE . DOLLAR suite_declaration DOLLAR ACCFERME

    DOLLAR  shift, and go to state 134


state 113

   16 local_list: LOCAL localbis .

    $default  reduce using rule 16 (local_list)


state 114

   17 localbis: declaration .

    $default  reduce using rule 17 (localbis)


state 115

   26 type_scalaire: ENTIER PUISS ACCOUVRE ENTIER ACCFERME .

    $default  reduce using rule 26 (type_scalaire)


state 116

   54 operand: PAROUVRE expression . PARFERME

    PARFERME  shift, and go to state 135


state 117

   51 expression: APPEL ACCOUVRE . IDENTIFIANT PAROUVRE expression PARFERME ACCFERME

    IDENTIFIANT  shift, and go to state 136


state 118

   58 operateur: PUISS .

    $default  reduce using rule 58 (operateur)


state 119

   55 operateur: MULT .

    $default  reduce using rule 55 (operateur)


state 120

   56 operateur: PLUS .

    $default  reduce using rule 56 (operateur)


state 121

   57 operateur: MOINS .

    $default  reduce using rule 57 (operateur)


state 122

   50 expression: operand operateur . operand

    PAROUVRE     shift, and go to state 88
    ENTIER       shift, and go to state 42
    IDENTIFIANT  shift, and go to state 89

    operand  go to state 137
    valeur   go to state 138


state 123

   37 affectation: IDENTIFIANT LEFTARROW . valeur

    ENTIER  shift, and go to state 42

    valeur  go to state 139


state 124

   33 structure_controle: FOR ACCOUVRE DOLLAR affectation KWTO . DOLLAR ENTIER DOLLAR ACCFERME ACCOUVRE suite_description ACCFERME
